Table accounts {
  id bigint [primary key]
  client_id bigint [ref: > clients.id] // ManyToOne
  name varchar(128)
  status varchar(16)
  balance bigint
  currency_code integer
  created_at timestamp
  updated_at timestamp
}

Table clients {
  id bigint [primary key]
  status varchar(16)
  first_name varchar(64)
  last_name varchar(64)
  email varchar(128)
  password varchar(128)
  address varchar(128)
  phone varchar(16)
  created_at timestamp
  updated_at timestamp
}

Table products {
  id bigint [primary key]
  name varchar(128)
  status varchar(16)
  currency_code integer
  min_interest_rate integer
  max_offer_limit bigint
  created_at timestamp
  updated_at timestamp
}

Table agreements {
  id bigint [primary key]
  account_id bigint [ref: > accounts.id] // ManyToOne
  product_id bigint [ref: > products.id] // ManyToOne
  status varchar(16)
  interest_rate integer
  debt bigint
  created_at timestamp
  updated_at timestamp
}

Table transactions {
  id bigint [primary key]
  debit_account_id bigint [ref: > accounts.id] // ManyToOne
  credit_account_id bigint [ref: > accounts.id] // ManyToOne
  status varchar(16)
  amount bigint
  description varchar(255)
  created_at timestamp
  updated_at timestamp
}